--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGOURI=mongodb://root:mypassword@localhost:27017/?authSource=admin&readPreference=primary&appname=MongoDB%20Compass&ssl=false
+MONGOURI=mongodb+srv://blake:c00ldud310@cluster1.oo1sglt.mongodb.net/?retryWrites=true&w=majority
